--- a/Index.HTML
+++ b/Index.HTML
@@ -7,6 +7,13 @@
   </head>
   <body>
     <h1>Welcome to my Weather Forecast App</h1>
-    <footer>Built by Palesa Motsoahae</footer>
+    <footer>
+      Built by 
+     <a href="https://github.com/bontlepalesa/" target ="_blank"> Palesa Motsoahae </a>,  code hosted on </a>
+
+     <a href="https://github.com/bontlepalesa/weather-forecast" target ="_blank">GitHub</a> and website hosted 
+     
+    <a href="https://my-weather-forcast-app.netlify.app/" target ="_blank">on Netlify</a>
+    </footer>
   </body>
 </html>
