I added HTML to the project

--- a/Index.HTML
+++ b/Index.HTML
@@ -6,9 +6,27 @@
     <title>Weather Forecast App</title>
   </head>
   <body>
-    <h1>Welcome to my Weather Forecast App</h1>
+    <header> 
+        <form >
+            <input type="search" placeholder="Enter a city... "requred />
+            <input type="submit" value="search"/>
+
+    </form>
+</header>
+    <main>  
+        <div>
+        <h1>Johannesburg</h1>
+        <p>
+             Sunday 09:42, Sunny
+           <br />
+            Humidity 59%, Wind: 6km/h
+        </p> 
+        </div>
+        <div>🌞 16&deg;C</div>
+       </main>
+
     <footer>
-      Built by 
+      This project was built by 
      <a href="https://github.com/bontlepalesa/" target ="_blank"> Palesa Motsoahae </a>,  code hosted on </a>
 
      <a href="https://github.com/bontlepalesa/weather-forecast" target ="_blank">GitHub</a> and website hosted 
