--- a/Index.HTML
+++ b/Index.HTML
@@ -2,36 +2,50 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Weather Forecast App</title>
   </head>
   <body>
-    <header> 
-        <form >
-            <input type="search" placeholder="Enter a city... "requred />
-            <input type="submit" value="search"/>
-
-    </form>
-</header>
-    <main>  
+    <div class="weather-forecast">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
         <div>
-        <h1>Johannesburg</h1>
-        <p>
-             Sunday 09:42, Sunny
-           <br />
+          <h1>Johannesburg</h1>
+          <p>
+            Sunday 09:42, Sunny
+            <br />
             Humidity 59%, Wind: 6km/h
-        </p> 
+          </p>
         </div>
         <div>🌞 16&deg;C</div>
-       </main>
-
-    <footer>
-      This project was built by 
-     <a href="https://github.com/bontlepalesa/" target ="_blank"> Palesa Motsoahae </a>,  code hosted on </a>
-
-     <a href="https://github.com/bontlepalesa/weather-forecast" target ="_blank">GitHub</a> and website hosted 
-     
-    <a href="https://my-weather-forcast-app.netlify.app/" target ="_blank">on Netlify</a>
-    </footer>
+      </main>
+      <footer>
+        This project was built by
+        <a href="https://github.com/bontlepalesa/" target="_blank"
+          >Palesa Motsoahae</a
+        >, code hosted on
+        <a
+          href="https://github.com/bontlepalesa/weather-forecast"
+          target="_blank"
+          >GitHub</a
+        >
+        and website hosted
+        <a href="https://my-weather-forcast-app.netlify.app/" target="_blank"
+          >on Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
