--- a/Index.HTML
+++ b/Index.HTML
@@ -71,11 +71,12 @@
   <body>
     <div class="weather-forecast">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city..."
             required
+            id="search-form-input"
             class="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
@@ -84,7 +85,7 @@
       <main>
         <div class="weather-forecast-data">
           <div>
-            <h1 class="weather-forecast-city">Johannesburg</h1>
+            <h1 class="weather-forecast-city" id="city">Johannesburg</h1>
             <p class="weather-forecast-details">
               Sunday 09:42, Sunny
               <br />
@@ -114,5 +115,6 @@
         >
       </footer>
     </div>
+    <script src="src/script.js"></script>
   </body>
 </html>
