Added search functionality using the API

--- a/Index.HTML
+++ b/Index.HTML
@@ -86,7 +86,7 @@
       <main>
         <div class="weather-forecast-data">
           <div>
-            <h1 class="weather-forecast-city" id="city">Johannesburg</h1>
+            <h1 class="weather-forecast-city" id="city"></h1>
             <p class="weather-forecast-details">
               Sunday 09:42, Sunny
               <br />
@@ -95,7 +95,7 @@
           </div>
           <div class="weather-forecast-temperature-container">
             <div class="weather-forecast-icon">🌞</div>
-            <div class="weather-forecast-temperature">16</div>
+            <div class="weather-forecast-temperature" id="temperature"></div>
             <div class="weather-forecast-unit">&deg;C</div>
           </div>
         </div>
