Injected more weather data

--- a/Index.HTML
+++ b/Index.HTML
@@ -88,9 +88,11 @@
           <div>
             <h1 class="weather-forecast-city" id="city"></h1>
             <p class="weather-forecast-details">
-              Sunday 09:42, Sunny
+              <span id="time"></span>
+              <span id="description"></span>
               <br />
-              Humidity: <strong>59%</strong>, Wind: <strong>6km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-forecast-temperature-container">
