Added weather icon data

--- a/Index.HTML
+++ b/Index.HTML
@@ -50,7 +50,7 @@
       }
       .weather-forecast-city {
         margin: 0;
-        font-size: 24px;
+        font-size: 35px;
       }
       .weather-forecast-details {
         margin: 10px 0;
@@ -96,7 +96,7 @@
             </p>
           </div>
           <div class="weather-forecast-temperature-container">
-            <div class="weather-forecast-icon">🌞</div>
+            <div id="icon"></div>
             <div class="weather-forecast-temperature" id="temperature"></div>
             <div class="weather-forecast-unit">&deg;C</div>
           </div>
