Added weather forecast html
Wrapped everything into classes so we can style it for CSS and only included one day

--- a/Index.HTML
+++ b/Index.HTML
@@ -101,6 +101,19 @@
             <div class="weather-forecast-unit">&deg;C</div>
           </div>
         </div>
+        <div class = "weather-app">
+          <div class = "row">
+              <div class = "col - 2">
+                <div class="weather-app-date">Thu</div>
+                <img src="http://openweathermap.org/img/wn/50d@2x.png" alt=""width="42px" />
+                </div>
+                 <div class="weather-app-temperatures">
+                  <span class="weather-app-temperature-max">18&deg;</span>
+                 <span class="weather-app-temperature-min">12&deg;</span>
+              </div>
+            </div>
+
+
       </main>
       <footer>
         This project was built by
